# Repo-Inspector

./: .gitignore  .repo-inspector.example.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  Dockerfile  LICENSE  README.md  README_EN.md  SECURITY.md  SECURITY_EN.md  SUPPORT.md  TERMS_OF_USE.md  TERMS_OF_USE_EN.md  config.yml  config.yml.example  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  vercel.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  generate-report.yml  pr-quality-comment.yml
api/: index.py
app/: __init__.py  config.py  db.py  github_client.py  i18n_store.py  main.py  models.py  stats_card.py  theme_store.py
app/locales/: translations.json
app/scanner/: __init__.py  checks.py  i18n.py  policy.py  schemas.py  scoring.py
app/static/: app.js  style.css
app/templates/: generator.html  index.html  progress.html  report.html
app/themes/: amber.json  arctic.json  aurora.json  custom.json  forest.json  graphite.json  lavender.json  light.json  matrix.json  midnight.json  (+11 more)
data/: app.db
docs/: DEPLOYMENT.md  PROJECT_STRUCTURE.md
scripts/: generate_report.py  pr_diff_summary.py  predeploy_check.py  render_report_summary.py
tests/: test_api_head.py  test_checks.py  test_fields_filtering.py  test_github_client.py  test_scoring.py  test_stats_card.py
web/: app.js  config.js  generator.html  generator.js  index.html  style.css
(+3 files in other folders)
